Resolves: fdo#39467 we should throw instead of crashing when \!is()